--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
         env:
           REQUIRED_COVERAGE: 80
         run: |
-          totalCoverage=$(go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+')
+          totalCoverage=$(go tool cover -func=coverage.out | grep total | grep -Eo '[0-9]+\.[0-9]+')
           echo "Total Coverage: $totalCoverage %"
           if (( $totalCoverage < $REQUIRED_COVERAGE )); then
             echo "Coverage is less than $REQUIRED_COVERAGE %"
