cicd: fix bash?

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Coverage Quality Check
         env:
           REQUIRED_COVERAGE: 80
+        shell: bash
         run: |
           totalCoverage=$(go tool cover -func=coverage.out | grep total | grep -Eo '[0-9]+\.[0-9]+')
           echo "Total Coverage: $totalCoverage %"
