--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,7 @@ jobs:
           REQUIRED_COVERAGE: 80
         shell: bash
         run: |
+          bash --version
           totalCoverage=$(go tool cover -func=coverage.out | grep total | grep -Eo '[0-9]+\.[0-9]+')
           echo "Total Coverage: $totalCoverage %"
           if (( $totalCoverage < $REQUIRED_COVERAGE )); then
