--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,12 +22,10 @@ jobs:
       - name: Coverage Quality Check
         env:
           REQUIRED_COVERAGE: 80
-        shell: bash
         run: |
-          bash --version
           totalCoverage=$(go tool cover -func=coverage.out | grep total | grep -Eo '[0-9]+\.[0-9]+')
           echo "Total Coverage: $totalCoverage %"
-          if (( $totalCoverage < $REQUIRED_COVERAGE )); then
+          if (( $(echo "$totalCoverage < $REQUIRED_COVERAGE" | bc -l) )); then
             echo "Coverage is less than $REQUIRED_COVERAGE %"
             exit 1
           fi
