--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           go-version: 1.21
       - name: Release Version
-        run: echo RELEASE_VERSION=$(grep -Eo '[0-9]+\.[0-9]+\.[0-9]+.*$') >> $GITHUB_ENV
+        run: echo RELEASE_VERSION=$(echo $GITHUB_REF_NAME | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+.*$') >> $GITHUB_ENV
       - name: Changes Heading Up-To-Date Check
         run: |
           date=$(date "+%Y-%m-%d")
