--- a/.github/workflows/prepare.yaml
+++ b/.github/workflows/prepare.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-      - release/*
+      - prepare/*
 
 jobs:
   release:
@@ -28,20 +28,6 @@ jobs:
       - name: Release Notes Capture
         run: |
           sed -n '/^[0-9]/,/^[0-9]/p' | head -n-1 | tail -n-1 > release-notes.md
-      - env:
-          GOOS: linux
-          GOARCH: amd64
-        run: go build -o today-$RELEASE_VERSION-$GOOS-$GOARCH ./
-      - env:
-          GOOS: darwin
-          GOARCH: arm64
-        run: go build -o today-$RELEASE_VERSION-$GOOS-$GOARCH ./
-      - env:
-          GOOS: darwin
-          GOARCH: amd64
-        run: go build -o today-$RELEASE_VERSION-$GOOS-GOARCH ./
-      - run: gh release create "v$RELEASE_VERSION" --draft --notes-file=release-notes.md
-      - run: gh release upload "v$RELEASE_VERSION" today-$RELEASE_VERSION-linux-amd64
-      - run: gh release upload "v$RELEASE_VERSION" today-$RELEASE_VERSION-darwin-arm64
-      - run: gh release upload "v$RELEASE_VERSION" today-$RELEASE_VERSION-darwin-amd64
-      - run: gh release edit "v$RELEASE_VERSION" --draft=false
+          echo "Release Notes Will be..."
+          echo "========================"
+          cat release-notes.md
