--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,7 +50,7 @@ jobs:
         env:
           GOOS: darwin
           GOARCH: amd64
-        run: go build -o today-$RELEASE_VERSION-$GOOS-GOARCH ./
+        run: go build -o today-$RELEASE_VERSION-$GOOS-$GOARCH ./
       - name: Create Release
         run: gh release create "v$RELEASE_VERSION" --draft --notes-file=release-notes.md
       - name: Upload Linux 64-bit Binary
