--- a/.github/workflows/prepare.yaml
+++ b/.github/workflows/prepare.yaml
@@ -29,7 +29,7 @@ jobs:
           fi
       - name: Release Notes Capture
         run: |
-          sed -n '/^[0-9]/,/^[0-9]/p' Changes.md | head -n-1 | tail -n-1 > release-notes.md
+          sed -n '/^[0-9]/,/^[0-9]/p' Changes.md | head -n-1 | tail -n+2 > release-notes.md
           echo "Release Notes Will be..."
           echo "========================"
           cat release-notes.md
