--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,13 +34,13 @@ jobs:
       - name: Prepare/Release Workflows Check
         run: |
           go install github.com/mikefarah/yq/v4@latest
-          yq '.jobs.release.steps.[0:5]' .github/workflows/release.yaml > release-steps.yaml
+          yq '.jobs.release.steps.[0:8]' .github/workflows/release.yaml > release-steps.yaml
           yq '.jobs.prepare.steps' .github/workflows/prepare.yaml > prepare-steps.yaml
           if ! diff release-steps.yaml prepare-steps.yaml; then
             echo "Prepare and Release workflows are not in sync!"
             exit 1
           fi
-          if ! yq '.jobs.release.steps.[5]' .github/workflows/release.yaml | grep -q 'Linux 64-bit Build'; then
+          if ! yq '.jobs.release.steps.[8]' .github/workflows/release.yaml | grep -q 'Create Release'; then
             echo 'Release has pre-build steps missing from Prepare workflow!'
             exit 1
           fi
