--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,12 @@ jobs:
           go-version: 1.21
       - name: Release Version
         run: echo RELEASE_VERSION=$(echo $GITHUB_REF_NAME | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+.*$') >> $GITHUB_ENV
+      - name: Version Check
+        run: |
+          if ! grep -q "$RELEASE_VERSION" cmd/version.txt; then
+            echo "cmd/version.txt does not match $RELEASE_VERSION!"
+            exit 1
+          fi
       - name: Changes Heading Up-To-Date Check
         run: |
           date=$(date "+%Y-%m-%d")
