feat: add abbreviation support to the resolver

--- a/tools/gen/verses/abbr.yaml
+++ b/tools/gen/verses/abbr.yaml
@@ -27,6 +27,10 @@ books:
     accept:
       - Genesis
       - Gn
+  - name: Exodus
+    standard: Ex.
+    accept:
+      - Exodus
   - name: Leviticus
     standard: Lev.
     accept:
