chore: skip some tests for coverage

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,9 @@ jobs:
         with:
           version: v1.59
       - run: go test -v ./...
-      - run: go test ./... -coverprofile=coverage.out
+      - run: |
+          coveredFiles=$(go list ./... | grep -v github.com/zostay/today/tools/gen/verses)
+          go test $coveredFiles -coverprofile=coverage.out
       - run: go tool cover -func=coverage.out
       - name: Coverage Quality Check
         env:
