--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
           header=$(head -n1 Changes.md)
           if [ "$header" != "## $RELEASE_VERSION  $date" ]; then
               echo "Changes.md is out of date!"
-              echo "Expected header: $RELEASE_VERSION  $date"
+              echo "Expected header: ## $RELEASE_VERSION  $date"
               echo "Found header:    $header"
               exit 1
           else
