--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,9 +15,11 @@ jobs:
         with:
           go-version: 1.22
           cache: false
-      - uses: golangci/golangci-lint-action@v6
+      - name: Download Go Modules
+        run: go mod download
+      - uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.59
+          version: v2.0
       - run: go test -v ./...
       - run: |
           coveredFiles=$(go list ./... | grep -v 'github.com/zostay/today/\(cmd\|tools/gen/verses\)')
